<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Produto">

    <TextView
        style="@style/TextHeader"
        android:id="@+id/textView12"
        android:text="@string/produto_label_cadProduto"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDescricao"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Descrição"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="#BBBBBB"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputValor"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/produto_label_monetario"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSalvar"
        style="@style/ButtonSave"
        android:contentDescription="@null"
        android:text="@string/produto_btn_save"
        app:layout_constraintEnd_toEndOf="@+id/textInputValor"
        app:layout_constraintTop_toBottomOf="@+id/textInputValor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProduto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
       android:layout_margin="8dp"
        android:background="@drawable/borda_rv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvar"
        tools:itemCount="5"
        tools:listitem="@layout/item_produto" />

</androidx.constraintlayout.widget.ConstraintLayout>